@@ -1,3 +1,9 @@
+r158 - october, 8, 2009
+    * StatutPeer::getCriteriaEnabled() is now getCriteriaEnabledForAssociation()
+    * MembreForm.class.php is up date
+    * membre : actions > asociationId is given to each form
+    
+
 r157 - october, 8, 2009
     * membre : templates > pendingSuccess.php > explicit message
     * StatutPeer::getCriteriaForEnabled() takes associationId as parameter
